test/tests/bad/num.carth
;; NoClassInstance

(defun foo [Unit] :of (Fun [Unit] Unit)
  (+ Unit Unit))
